--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.0+3
   cached_network_image:
+  razorpay_flutter: ^1.4.0
 
 dev_dependencies:
   flutter_test:
